<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="org.d3if4033.praassesment1.About">


    <TextView
            android:text="@string/nama_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nama" android:layout_marginTop="148dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/nim_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nim" app:layout_constraintStart_toStartOf="@+id/nama"
            app:layout_constraintEnd_toEndOf="@+id/nama" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/nama"/>
    <TextView
            android:text="@string/kelas_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kelas" app:layout_constraintStart_toStartOf="@+id/nim"
            app:layout_constraintEnd_toEndOf="@+id/nim" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/nim"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>